src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>RMA_Outbound_Tracking_Number__c</fullName>
        <label>Outbound Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Process_Status__c</fullName>
        <label>Process Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Secondary_Contact_Email__c</fullName>
        <formula>RMA_Secondary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Secondary_Contact_First_Name__c</fullName>
        <formula>RMA_Secondary_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Secondary_Contact__c</fullName>
        <label>Ship To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_ShipToBuilding__c</fullName>
        <label>ShipToBuilding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_ShipToCompany__c</fullName>
        <label>ShipToCompany</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_ShipTo_Attention_Line__c</fullName>
        <label>Ship To Attention Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Shipping_PostalCode__c</fullName>
        <label>Shipping PostalCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_SiebelId__c</fullName>
        <label>RMA SiebelId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Siebel_Sync_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Siebel Request Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_Special_Instruction__c</fullName>
        <label>Special Instruction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Customer Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fault Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH PO Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH PO Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH PO Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printhead Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printhead Retest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printhead Warranty Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printhead Warranty Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Receive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrepairable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Parts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Total_Repair_Price__c</fullName>
        <label>Total Repair Price</label>
        <summarizedField>RMA_Return__c.Estimated_Repair_price__c</summarizedField>
        <summaryForeignKey>RMA_Return__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RMA_Tracking__c</fullName>
        <label>RMA Tracking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Update_Contact_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Shipping Address To Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIESHave_Client_Care_Request_Samples__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Client Care Request Samples</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Analysis_Summary__c</fullName>
        <label>Analysis Summary</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Access Control/Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Selivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Citation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service/Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership/Gift Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_CAR_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAR Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_CAR_Number__c</fullName>
        <label>CAR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_CAR_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAR Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <picklist>
            <picklistValues>
                <fullName>Ceva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadrunner Dawes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL Parcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dachser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Case_Priority_Calc__c</fullName>
        <formula>IF( TEXT(Priority) = &apos;Critical&apos;, IMAGE(&quot;/resource/Supplies_CasePriority_Critical&quot;, &quot;Critical&quot;), 
IF( TEXT(Priority) = &apos;Standard&apos;, IMAGE(&quot;/resource/Supplies_CasePriority_Standard&quot;, &quot;Standard&quot;), IF( TEXT(Priority) = &apos;No Action Required&apos;, IMAGE(&quot;/resource/Supplies_CasePriority_NoAction&quot;, &quot;No Action Required&quot;), null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplies Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Close_Resolution__c</fullName>
        <label>Close Resolution</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Credit Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCA to Forward to Tech Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Complaint_Subject__c</fullName>
        <label>Complaint Subject</label>
        <picklist>
            <controllingField>SUPPLIES_Complaint_Type__c</controllingField>
            <picklistValues>
                <fullName>Defective Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Order Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qty Over Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qty Under Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Freight Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weights &amp; Dims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking Number Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Request Date Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Promise Date Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Alert (Please provide GA number)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please Specify Below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Part Number / Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Ship-to Address / Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Not As Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mis-advised By Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK1 Supplies Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL1 Supplies Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse &amp; Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Customer_Resolution_Preference__c</fullName>
        <label>Customer Resolution Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Information Purposes Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement of Current Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement with Another Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Duplicate_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for supplies quality to identify duplicate issues.</description>
        <label>Duplicate Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_End_User__c</fullName>
        <description>Field to capture the end user name</description>
        <label>End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Freight_Terms__c</fullName>
        <label>Freight Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepay/Add</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Is_Customer_Returning_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Returning Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Item_1_Qty_Non_Conforming__c</fullName>
        <label>Item 1 Qty Non-Conforming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Item_2_Qty_Non_Conforming__c</fullName>
        <label>Item 2 Qty Non-Conforming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Item_3_Qty_Non_Conforming__c</fullName>
        <label>Item 3 Qty Non-Conforming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Item_Number_1__c</fullName>
        <label>Item Number 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Item Number)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Item_Number_2__c</fullName>
        <label>Item Number 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Item Number 2)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Item_Number_3__c</fullName>
        <label>Item Number 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Item Number 3)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Lot_Batch_Serial_Number_1__c</fullName>
        <label>Lot/Batch/Serial Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Lot_Batch_Serial_Number_2__c</fullName>
        <label>Lot/Batch/Serial Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Lot_Batch_Serial_Number_3__c</fullName>
        <label>Lot/Batch/Serial Number 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Material_RM__c</fullName>
        <label>Material RM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Order_Qty_Item_1__c</fullName>
        <label>Order Quantity Item 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Order_Quantity_Item_2__c</fullName>
        <label>Order Quantity Item 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Order_Quantity_Item_3__c</fullName>
        <label>Order Quantity Item 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Order_Quantity_Item_4__c</fullName>
        <label>Order Quantity Item 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Other_Carrier__c</fullName>
        <label>Other Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Other_Complaint_Subject__c</fullName>
        <label>Other Complaint Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Other_Items__c</fullName>
        <label>Other Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Other_Resolution_Preference__c</fullName>
        <label>Other Resolution Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Other_Vendor__c</fullName>
        <label>Other Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Product_Age__c</fullName>
        <label>Product Age</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 12 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Product_Manufacture_Date__c</fullName>
        <label>Product Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Prov_Explanation_for_Customer__c</fullName>
        <inlineHelpText>Please provide a detailed explanation that Client Care can deliver to the customer</inlineHelpText>
        <label>Provide Explanation for Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Purchase_Order__c</fullName>
        <label>Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Quality_Closed_Date__c</fullName>
        <label>Quality Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Quality_Next_Steps__c</fullName>
        <inlineHelpText>For unconfirmed cases to determine what is needed for internal/external resolution.</inlineHelpText>
        <label>Quality Next Steps</label>
        <picklist>
            <picklistValues>
                <fullName>R&amp;D Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Watch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Support Review</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Quality_Sub_Status__c</fullName>
        <label>Quality Sub Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Awaiting Information from Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples sent to R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Investigating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forward to Tech Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Information from Sales/Client Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Testing Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_RMA_Number__c</fullName>
        <label>RMA #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Reject_Code__c</fullName>
        <label>Reject Code</label>
        <picklist>
            <picklistValues>
                <fullName>C-00 ORDER ENTRY ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-01 BILLING ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-02 CUSTOMER ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-03 ERROR ON PRODUCT SPEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-04 USED WRONG PRODUCT SPEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-05 PRICING ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-06 SALESPERSON ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-07 FAILURE TO RESPOND TO CUSTOMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-08 QUOTE ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-00 CREDIT FOR LATE DELIVERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-01 DAMAGED IN TRANSIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-02 LOST BY CARRIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-03 FREIGHT CLAIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-04 LATE SHIPMENT BY CARRIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-00 WRONG PRODUCT ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-01 WRONG PRODUCT PACKAGED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-02 NO PRODUCT ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-03 CHANGE PRODUCT ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-04 WRONG PACKAGING USED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-05 INCORRECT CORE LABEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-06 INCORRECT BOX LABEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-00 SHELF LIFE EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-01 WRINKLE ISSUE/RIDGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-02 SCRATCH IN WEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-03 POOR LINER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-04 POOR ADHESIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-05 POOR FACE SHEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-06 WRONG MATERIAL USED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-07 NO DEFECT FOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-08 ADHESIVE OOZE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Related_Opportunity__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Replacement_Shipment_Send_Date__c</fullName>
        <label>Estimated Replacement Shipment Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUPPLIES_Responsible_Department__c</fullName>
        <description>The process where the non-conformance happened.</description>
        <label>Responsible Department</label>
        <picklist>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning/Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbon Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>